src/test/ui/feature-gates/feature-gate-exhaustive-patterns.nll.stderr
error[E0005]: refutable pattern in local binding: `Err(_)` not covered
  --> $DIR/feature-gate-exhaustive-patterns.rs:7:9
   |
LL |     let Ok(_x) = foo();
   |         ^^^^^^ pattern `Err(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     if let Ok(_x) = foo() { /* */ }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
